unpackaged/main/default/objects/Amphibians__c/Amphibians__c.object-meta.xml
<CustomObject>
    <description>testing this stuff</description>
    <label>Amphibians and Reptiles</label>
    <nameField>
        <label>Amphibians Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Amphibians and reps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>