unpackaged/main/default/objects/Amphibians__c/fields/bla_bla__c.field-meta.xml
<CustomField>
    <fullName>bla_bla__c</fullName>
    <defaultValue>false</defaultValue>
    <label>bla bla</label>
    <type>Checkbox</type>
</CustomField>