unpackaged/main/default/objects/Amphibians__c/fields/Checks_Passed__c.field-meta.xml
<CustomField>
    <fullName>Checks_Passed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Checks Passed</label>
    <type>Checkbox</type>
</CustomField>