unpackaged/main/default/objects/Amphibians__c/fields/gary__c.field-meta.xml
<CustomField>
    <fullName>gary__c</fullName>
    <defaultValue>false</defaultValue>
    <label>gary</label>
    <type>Checkbox</type>
</CustomField>