unpackaged/main/default/objects/Amphibians__c/fields/teeheeeee__c.field-meta.xml
<CustomField>
    <fullName>teeheeeee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>teeheeeee</label>
    <type>Checkbox</type>
</CustomField>