unpackaged/main/default/objects/Amphibians__c/fields/toms_tick_box__c.field-meta.xml
<CustomField>
    <fullName>toms_tick_box__c</fullName>
    <defaultValue>false</defaultValue>
    <label>toms tick box</label>
    <type>Checkbox</type>
</CustomField>